# sparse-eigen-tests

./: README.md  profiling-single-thread-r-3-2-1
data/: eig2.txt
fortran/: 10x10.in  CMakeLists.txt  computeEigen.f90  computeEigen.pbs  data2.in  sparse_matrix.f90  test_read.f90
matlab/: computeEigen.m
python/: computeEigen.pbs  computeEigen.py  t1.py  t1.py~
